MKTAXI-2662 => Fixed the Paypal widget alignment.

--- a/Src/Server/apcurium.MK.Web/assets/less/TaxiHail.less
+++ b/Src/Server/apcurium.MK.Web/assets/less/TaxiHail.less
@@ -106,7 +106,7 @@ header {
     display: inline-block;
     position: absolute;
     right: 180px;
-    top: 10px;
+    top: -22px; // Placing the PayPal widget inside the header.
 }
 
 .facebook-icon {
